# ArcaeaAssetsUpdater

./: .gitignore  README.md  assets_updater.py  config.py  pyproject.toml  route.py  test.py
ArcaeaAssetsUpdater/: __main__.py  assets_updater.py  config.py  route.py  scheduler_job.py
ArcaeaAssetsUpdater/data/: version.json
ArcaeaAssetsUpdater/song_info/: database.py  query.py
ArcaeaAssetsUpdater/song_info/schema/: __init__.py  song_info.py  song_list.py
data/: version.json
