[tool.poetry]
name = "ArcaeaAssetsUpdater"
version = "0.1.0"
description = ""
authors = ["Chendihe4975 <Chendihe4975@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.15.0"
fastapi = "^0.68.0"
APScheduler = "^3.7.0"
ujson = "^4.0.2"
aiohttp = "^3.7.4"
aiofile = "^3.7.4"
aiofiles = "^0.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
