[tool.poetry]
name = "ArcaeaAssetsUpdater"
version = "0.2.0"
description = ""
authors = ["SEAFHMC <soku_ritsuki@outlook.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.17.6"
fastapi = "^0.75.0"
APScheduler = "^3.9.1"
ujson = "^5.1.0"
aiohttp = "^3.8.1"
aiofile = "^3.7.4"
aiofiles = "^0.8.0"
peewee = ">=3.14.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
